// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse ./add-a.js.flow 1`] = `
Object {
  "declarationsByName": Object {
    "add": Array [
      Object {
        "kind": "FunctionDeclaration",
        "leadingComments": Array [
          Object {
            "type": "BlockComment",
            "value": "*
 * Adds two numbers together
 *
 * @param a The first number
 * @param b The second number
 ",
          },
        ],
        "loc": SourceLocation {
          "end": Position {
            "column": 51,
            "line": 9,
          },
          "filename": "test-cases/add-flow/add-a.js.flow",
          "start": Position {
            "column": 0,
            "line": 9,
          },
        },
        "localName": "add",
        "params": Array [
          Object {
            "name": "a",
            "type": Object {
              "kind": "NumberType",
            },
          },
          Object {
            "name": "b",
            "type": Object {
              "kind": "NumberType",
            },
          },
        ],
        "restParam": undefined,
        "returnType": Object {
          "kind": "NumberType",
        },
        "typeParameters": Array [],
      },
    ],
  },
  "exportStatements": Array [
    Object {
      "kind": "DefaultExportStatement",
      "localName": "add",
    },
  ],
}
`;

exports[`parse ./add-b.js 1`] = `
Object {
  "declarationsByName": Object {
    "add": Array [
      Object {
        "kind": "FunctionDeclaration",
        "leadingComments": Array [
          Object {
            "type": "BlockComment",
            "value": "*
 * Adds two numbers together
 *
 * @param a The first number
 * @param b The second number
 ",
          },
        ],
        "loc": SourceLocation {
          "end": Position {
            "column": 1,
            "line": 11,
          },
          "filename": "test-cases/add-flow/add-b.js",
          "start": Position {
            "column": 15,
            "line": 9,
          },
        },
        "localName": "add",
        "params": Array [
          Object {
            "name": "a",
            "type": Object {
              "kind": "NumberType",
            },
          },
          Object {
            "name": "b",
            "type": Object {
              "kind": "NumberType",
            },
          },
        ],
        "restParam": undefined,
        "returnType": Object {
          "kind": "NumberType",
        },
        "typeParameters": Array [],
      },
    ],
  },
  "exportStatements": Array [
    Object {
      "kind": "DefaultExportStatement",
      "localName": "add",
    },
  ],
}
`;

exports[`parse ./index.js 1`] = `
Object {
  "declarationsByName": Object {
    "addA": Array [
      Object {
        "kind": "ImportDefault",
        "leadingComments": Array [],
        "loc": SourceLocation {
          "end": Position {
            "column": 11,
            "line": 1,
          },
          "filename": "test-cases/add-flow/index.js",
          "start": Position {
            "column": 7,
            "line": 1,
          },
        },
        "localName": "addA",
        "relativePath": "./add-a",
      },
    ],
    "addB": Array [
      Object {
        "kind": "ImportDefault",
        "leadingComments": Array [],
        "loc": SourceLocation {
          "end": Position {
            "column": 11,
            "line": 2,
          },
          "filename": "test-cases/add-flow/index.js",
          "start": Position {
            "column": 7,
            "line": 2,
          },
        },
        "localName": "addB",
        "relativePath": "./add-b",
      },
    ],
  },
  "exportStatements": Array [
    Object {
      "exportedName": "addA",
      "kind": "NamedExportStatement",
      "localName": "addA",
    },
    Object {
      "exportedName": "addB",
      "kind": "NamedExportStatement",
      "localName": "addB",
    },
  ],
}
`;

exports[`print ./add-a.d.ts 1`] = `
"declare function add(a: number, b: number): number;
export default add;"
`;

exports[`print ./add-a.js.flow 1`] = `
"// @flow

declare function add(a: number, b: number): number;
export default add;"
`;

exports[`print ./add-b.d.ts 1`] = `
"declare function add(a: number, b: number): number;
export default add;"
`;

exports[`print ./add-b.js.flow 1`] = `
"// @flow

declare function add(a: number, b: number): number;
export default add;"
`;

exports[`print ./index.d.ts 1`] = `
"import addA from './add-a';
import addB from './add-b';
export {addA};
export {addB};"
`;

exports[`print ./index.js.flow 1`] = `
"// @flow

import addA from './add-a';
import addB from './add-b';
export {addA};
export {addB};"
`;
